istio/servicea/deploymentv1/kubernetes-deploymentv1.yml
#namespace for servicea
apiVersion: v1
kind: Namespace
metadata:
  name: demo
---
#kubernetes deployment for servicea
apiVersion: apps/v1
kind: Deployment
metadata:
  name: servicea
  labels:
    app: servicea
spec:
  replicas: 1
  selector:
    matchLabels:
      app: servicea
  template:
    metadata:
      labels:
        app: servicea
    spec:
      containers:
        - name: servicea
          image: myrgmyacr.azurecr.io/servicea
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 100m
              memory: 128Mi
---
# Path: kubernetes-service.yml
#kubernetes service for servicea
apiVersion: v1
kind: Service
metadata:
  name: servicea
  labels:
    app: servicea
spec:
  ports:
    - port: 80
      targetPort: 8081
      name: http
  selector:
    app: servicea

---
#ingress resource for servicea
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: servicea
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /servicea
            pathType: Prefix
            backend:
              service:
                name: servicea
                port:
                  number: 80
